src/templating/snapshots/yolk_dots__templating__parser__test__error_multiline_with_else.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\\n{%else%}\\n{%end%}\").unwrap_err())"
snapshot_kind: text
---
  × Failed to parse yolk template file

Error: 
  × Expected valid element.
   ╭─[file:2:3]
 1 │ {%f%}
 2 │ {%else%}
   ·   ───┬───
   ·      ╰── here
 3 │ {%end%}
   ╰────
